[gd_scene load_steps=14 format=3 uid="uid://bl8xeesfujeg"]

[ext_resource type="Script" path="res://level_3.gd" id="1_dpb6c"]
[ext_resource type="PackedScene" uid="uid://c04v0qws1elcq" path="res://fork_lift.tscn" id="2_j2ena"]
[ext_resource type="PackedScene" uid="uid://cr7jdvhhvspwq" path="res://delivery_area.tscn" id="3_nnpq5"]
[ext_resource type="PackedScene" uid="uid://b7y8icoxsxby4" path="res://hud.tscn" id="4_vjofl"]
[ext_resource type="PackedScene" uid="uid://cf8aq8c0gosgm" path="res://floor_is_lava.tscn" id="5_pmd74"]
[ext_resource type="PackedScene" uid="uid://bxyfdo8056pu1" path="res://longhouse.tscn" id="6_wrnvv"]
[ext_resource type="PackedScene" uid="uid://bkckf4a08nt8e" path="res://elephant.tscn" id="7_fsw20"]
[ext_resource type="PackedScene" uid="uid://b6pidwgm2l5g3" path="res://big_crate.tscn" id="7_i3l7g"]
[ext_resource type="PackedScene" uid="uid://b1svf2cmcewrp" path="res://box.tscn" id="9_aknx2"]
[ext_resource type="PackedScene" uid="uid://53whfjpd6r3x" path="res://explode_sound.tscn" id="10_x20pb"]
[ext_resource type="PackedScene" uid="uid://odk5maj5o0b7" path="res://win_sound.tscn" id="11_1nh88"]

[sub_resource type="BoxMesh" id="BoxMesh_pwoxs"]
size = Vector3(50, 0.1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_oxr63"]
size = Vector3(50, 0.1, 100)

[node name="level_3" type="Node3D"]
script = ExtResource("1_dpb6c")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.885626, -0.446021, 0.129356, 0.10523, 0.0785641, 0.99134, -0.452321, 0.891568, -0.0226435, 0, 0, 0)
shadow_enabled = true

[node name="fork_lift" parent="." instance=ExtResource("2_j2ena")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.51594, 1.30951, -45.2967)

[node name="delivery_area" parent="." instance=ExtResource("3_nnpq5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.436163, 4, 47.1229)

[node name="hud" parent="." instance=ExtResource("4_vjofl")]

[node name="objective" parent="hud" index="3"]
text = "OBJECTIVE : Deliver elephant
"

[node name="floor_is_lava" parent="." instance=ExtResource("5_pmd74")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false

[node name="MeshInstance3D" parent="floor_is_lava" index="0"]
mesh = SubResource("BoxMesh_pwoxs")

[node name="CollisionShape3D" parent="floor_is_lava" index="1"]
shape = SubResource("BoxShape3D_oxr63")

[node name="longhouse" parent="." instance=ExtResource("6_wrnvv")]

[node name="crate" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2.52318, -39)

[node name="crate2" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.422, 2.52726, -39)

[node name="crate3" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.32499, 2.52318, -39)

[node name="crate4" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5865, 2.52318, -39)

[node name="crate5" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.47782, 2.52318, -30.5667)

[node name="crate6" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.70538, 2.52318, -23.8373)

[node name="crate7" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.89981, 2.52318, -15.213)

[node name="crate8" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2.52318, -23.6352)

[node name="crate9" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.48023, 2.52318, -18.5967)

[node name="crate10" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.4802, 2.52318, -31.7726)

[node name="crate12" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.17891, 2.52318, -8.84811)

[node name="crate13" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.655871, 2.52318, -2.13355)

[node name="crate11" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5799, 2.52318, -11.0479)

[node name="crate14" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.27107, 2.52318, 3.64593)

[node name="crate15" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.03729, 2.52318, 7.65409)

[node name="crate16" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.0569, 2.52318, 19.811)

[node name="crate17" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0143, 2.52318, 24.0235)

[node name="crate18" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.529949, 2.52318, 28.8002)

[node name="crate19" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.13207, 2.52318, 29.7212)

[node name="elephant" parent="." instance=ExtResource("7_fsw20")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.318469, 1.64983, -41.3157)
mass = 15.0

[node name="crate20" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.70665, 2.52318, -39)

[node name="crate21" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.45514, 2.52318, 25.6489)

[node name="crate22" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.0402, 2.52318, 22.332)

[node name="crate23" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.93819, 2.52318, 26.1485)

[node name="crate24" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.17894, 2.52318, -18.9853)

[node name="crate25" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.99691, 2.52318, -5.23709)

[node name="box" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.94088, 1.08209, -35.5633)

[node name="box2" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.84341, 1.08209, -32.5152)

[node name="box3" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38049, 1.08209, -35.1193)

[node name="box4" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.6921, 1.08209, -28.6044)

[node name="box5" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.3871, 1.08209, -35.7959)

[node name="box6" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.7018, 1.08209, 24.1056)

[node name="box7" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.1732, 1.08209, 16.8461)

[node name="box8" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.2167, 1.0821, 10.0456)

[node name="box9" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.1734, 1.08209, 35.8824)

[node name="box10" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.2159, 1.08209, 25.4824)

[node name="box11" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.27148, 1.08209, 46.1959)

[node name="box12" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.0658, 1.08209, 26.6507)

[node name="box13" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.1709, 1.08209, 29.0923)

[node name="box14" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.60534, 1.08209, 0.974741)

[node name="box15" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.3818, 1.08209, 12.7449)

[node name="crate26" parent="." instance=ExtResource("7_i3l7g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.8656, 2.52318, -11.2856)

[node name="box16" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.7018, 1.08209, 24.1056)

[node name="box17" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.75739, 1.08209, 34.6377)

[node name="box18" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.65651, 1.08209, 38.0474)

[node name="box19" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.38477, 1.08209, 44.2878)

[node name="box20" parent="." instance=ExtResource("9_aknx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.1338, 1.08209, 39.3004)

[node name="explode_sound" parent="." instance=ExtResource("10_x20pb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -34)

[node name="win_sound" parent="." instance=ExtResource("11_1nh88")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -21)

[connection signal="fall" from="fork_lift" to="." method="_on_fork_lift_fall"]
[connection signal="body_entered" from="delivery_area" to="." method="_on_delivery_area_body_entered"]
[connection signal="next" from="hud" to="." method="_on_hud_next"]
[connection signal="quit" from="hud" to="." method="_on_hud_quit"]
[connection signal="restart" from="hud" to="." method="_on_hud_restart"]
[connection signal="time_up" from="hud" to="." method="_on_hud_time_up"]
[connection signal="body_entered" from="floor_is_lava" to="." method="_on_floor_is_lava_body_entered"]
[connection signal="body_exited" from="floor_is_lava" to="." method="_on_floor_is_lava_body_exited"]

[editable path="hud"]
[editable path="floor_is_lava"]
[editable path="crate"]
